# sceneforge

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
configs/: ablation_rgb_only.yaml  train.yaml
data/raw/nyu_depth_v2/: annotations.json  depth_00000.npy  depth_00001.npy  depth_00002.npy  depth_00003.npy  depth_00004.npy  depth_00005.npy  depth_00006.npy  depth_00007.npy  depth_00008.npy  depth_00009.npy  depth_00010.npy  depth_00011.npy  depth_00012.npy  depth_00013.npy  depth_00014.npy  depth_00015.npy  depth_00016.npy  depth_00017.npy  depth_00018.npy  depth_00019.npy  depth_00020.npy  depth_00021.npy  depth_00022.npy  depth_00023.npy  depth_00024.npy  depth_00025.npy  depth_00026.npy  depth_00027.npy  depth_00028.npy  depth_00029.npy
data/raw/sun_rgbd/: annotations.json  depth_00000.npy  depth_00001.npy  depth_00002.npy  depth_00003.npy  depth_00004.npy  depth_00005.npy  (+24 more)
docker/: Dockerfile  Dockerfile.streamlit  docker-compose.yml
docs/: api.md  architecture.md  deployment.md  training.md
requirements/: serving.txt
scripts/: download_datasets.py  run_ablation.py  run_drift_check.py
src/: config.py
src/agents/: scene_agent.py
src/data/: dataset.py
src/models/: backbone.py  losses.py
src/monitoring/: drift.py  mlflow_utils.py
src/rag/: scene_narrator.py
src/serving/: api.py  database.py
src/training/: evaluate.py  train.py
src/ui/: app.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_database.py  test_dataset.py  test_drift.py  test_evaluate.py  test_losses.py  test_mlflow_utils.py  test_train.py
